--- a/org.eclipse.oomph.console.product/pom.xml
+++ b/org.eclipse.oomph.console.product/pom.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.a-langer</groupId>
+        <groupId>io.klib.tools</groupId>
         <artifactId>org.eclipse.oomph.console.root</artifactId>
         <version>1.0.5-SNAPSHOT</version>
         <relativePath>..</relativePath>
