--- a/org.eclipse.oomph.console/pom.xml
+++ b/org.eclipse.oomph.console/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.klib.tools</groupId>
         <artifactId>org.eclipse.oomph.console.root</artifactId>
-        <version>1.0.5-SNAPSHOT</version>
+        <version>1.0.5</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>org.eclipse.oomph.console</artifactId>
