--- a/org.eclipse.oomph.console/pom.xml
+++ b/org.eclipse.oomph.console/pom.xml
@@ -7,9 +7,49 @@
     <parent>
         <groupId>io.klib.tools</groupId>
         <artifactId>org.eclipse.oomph.console.root</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>org.eclipse.oomph.console</artifactId>
     <packaging>eclipse-plugin</packaging>
+    <name>${project.artifactId}</name>
+    <url>https://github.com/klibio/eclipse-oomph-console</url>
+    <description>Oomph Console Installer ${project.artifactId}</description>
+    <licenses>
+        <license>
+            <name>EPL-2.0</name>
+            <url>https://opensource.org/licenses/EPL-2.0</url>
+        </license>
+    </licenses>
+    <organization>
+        <name>Kirschners GmbH</name>
+        <url>https://klib.io/</url>
+      </organization>
+    <developers>
+        <developer>
+            <id>peterkir</id>
+            <email>peter@klib.io</email>
+            <name>Peter Kirschner</name>
+            <url>https://klib.io</url>
+            <organization>Kirschners GmbH</organization>
+            <organizationUrl>https://kirschners.de</organizationUrl>
+            <roles>
+              <role>architect</role>
+              <role>developer</role>
+            </roles>
+            <timezone>1</timezone>
+        </developer>
+        <developer>
+            <id>a-langer</id>
+            <name>Alexey Langer</name>
+            <email>langeress@gmail.com</email>
+            <url>https://www.linkedin.com/in/a-langer</url>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git@github.com:klibio/eclipse-oomph-console.git</connection>
+        <developerConnection>git@github.com:klibio/eclipse-oomph-console.git</developerConnection>
+        <url>https://github.com/klibio/eclipse-oomph-console</url>
+    </scm>
 </project>
