--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.klib.tools</groupId>
     <artifactId>org.eclipse.oomph.console.root</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6</version>
     <packaging>pom</packaging>
 
-    <name>${project.groupId}:${project.artifactId}</name>
+    <name>${project.artifactId}</name>
     <url>https://github.com/klibio/eclipse-oomph-console</url>
-    <description>Oomph Console Installer</description>
-
+    <description>Oomph Console Installer ${project.artifactId}</description>
     <licenses>
         <license>
             <name>EPL-2.0</name>
@@ -20,7 +19,7 @@
     <organization>
         <name>Kirschners GmbH</name>
         <url>https://klib.io/</url>
-      </organization>
+    </organization>
     <developers>
         <developer>
             <id>peterkir</id>
@@ -30,8 +29,8 @@
             <organization>Kirschners GmbH</organization>
             <organizationUrl>https://kirschners.de</organizationUrl>
             <roles>
-              <role>architect</role>
-              <role>developer</role>
+                <role>architect</role>
+                <role>developer</role>
             </roles>
             <timezone>1</timezone>
         </developer>
@@ -91,23 +90,16 @@
         <maven.compiler.release>11</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <tycho.version>4.0.7</tycho.version>
-        <jarsigner.version>1.3.2</jarsigner.version>
-        <maven.source.version>3.2.1</maven.source.version>
-        <maven.resources.version>3.2.0</maven.resources.version>
-        <maven.javadoc.version>3.3.2</maven.javadoc.version>
+        <jarsigner.version>3.0.0</jarsigner.version>
+        <maven.source.version>3.3.0</maven.source.version>
+        <maven.resources.version>3.3.1</maven.resources.version>
+        <maven.javadoc.version>3.6.3</maven.javadoc.version>
         <formatter.maven.version>2.19.0</formatter.maven.version>
-        <maven.compiler.version>3.10.0</maven.compiler.version>
-        <maven.deploy.version>3.0.0</maven.deploy.version>
+        <maven.deploy.version>3.1.1</maven.deploy.version>
         <nexus.staging.maven.version>1.6.13</nexus.staging.maven.version>
-        <maven.gpg.version>3.0.1</maven.gpg.version>
+        <maven.gpg.version>3.2.2</maven.gpg.version>
     </properties>
 
-    <!--
-        mvn clean install -DskipTests
-        mvn -pl org.eclipse.oomph.console.tp,org.eclipse.oomph.console.core,org.eclipse.oomph.console -am
-    clean package -DskipTests -o
-        mvn -pl org.eclipse.oomph.console.product -am clean package -DskipTests -o
-    -->
     <modules>
         <module>org.eclipse.oomph.console</module>
         <module>org.eclipse.oomph.console.core</module>
@@ -200,7 +192,7 @@
                         <artifact>
                             <groupId>io.klib.tools</groupId>
                             <artifactId>org.eclipse.oomph.console.tp</artifactId>
-                            <version>1.0.5</version>
+                            <version>1.0.6</version>
                         </artifact>
                     </target>
                     <executionEnvironment>org.eclipse.justj.openjdk.hotspot.jre.minimal-17</executionEnvironment>
@@ -257,20 +249,6 @@
         </plugins>
     </build>
 
-    <!--
-# verify build before release
-./mvnw clean verify -Possrh -DskipTests -o
-
-# configure version for release (MANIFEST and pom) - see
-    https://stackoverflow.com/a/34119136/2918516
-./mvnw org.eclipse.tycho:tycho-versions-plugin:set-version -DnewVersion=1.0.5 -o
-
-# releae to sonatype
-./mvnw clean deploy -Possrh,oomph-p2 -DskipTests
-
-# increase version to new snapshot
-./mvnw org.eclipse.tycho:tycho-versions-plugin:set-version -DnewVersion=1.0.6.qualifier -o
--->
     <profiles>
         <profile>
             <id>ossrh</id>
@@ -296,13 +274,15 @@
                         <version>${maven.javadoc.version}</version>
                         <configuration>
                             <detectJavaApiLink>false</detectJavaApiLink>
-                            <javadocVersion>2.0</javadocVersion>
+                            <javadocVersion>17.0.7</javadocVersion>
                             <additionalOptions>
                                 <option>-Xdoclint:-missing</option>
                                 <option>-html5</option>
                                 <option>-windowtitle "${project.description}"</option>
                             </additionalOptions>
-                            <excludePackageNames>test.*:*.tests:*.tests.*:*.test:*.test.*</excludePackageNames>
+                            <!-- 
+    <excludePackageNames>test.*:*.tests:*.tests.*:*.test:*.test.*</excludePackageNames>
+-->
                         </configuration>
                         <executions>
                             <execution>
@@ -362,7 +342,7 @@
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                             <autoReleaseAfterClose>true</autoReleaseAfterClose>
                             <tags>
-                                <localUsername>${env.USER}</localUsername>
+                                <localUsername>${env.USER}${env.USERNAME}</localUsername>
                                 <javaVersion>${java.version}</javaVersion>
                             </tags>
                         </configuration>
