--- a/org.eclipse.oomph.console.product/pom.xml
+++ b/org.eclipse.oomph.console.product/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.klib.tools</groupId>
         <artifactId>org.eclipse.oomph.console.root</artifactId>
-        <version>1.0.8</version>
+        <version>1.0.9-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>org.eclipse.oomph.console.product</artifactId>
